--- a/sequelize/package.json
+++ b/sequelize/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "mysql2": "^2.3.3",
     "sequelize": "^5.9.x",
     "sqlite3": "^5.0.2"
   }
