--- a/encryption/package.json
+++ b/encryption/package.json
@@ -4,13 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/crypto-js": "^4.0.2",
+    "bcrypt": "^5.0.1",
     "crypto-js": "^4.1.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.11"
+    "@types/crypto-js": "^4.0.2",
+    "@types/node": "^16.11.11",
+    "@types/bcrypt": "^5.0.0"
   },
   "scripts": {
-    "start-crpyto": "tsc && node dist/cryptojs"
+    "start-crypto": "tsc && node dist/cryptojs",
+    "start-bcrypt": "tsc && node dist/bcrypt"
   }
 }
